# eon-chess-v1

./: .chess_workflow.yaml  .docsync.yaml  .env.production  .gitattributes  .gitignore  AEON_CHESS_ANALYSIS.md  AESTHETIC_IMPROVEMENTS.md  ALPHA_RELEASE_NOTES.md  ANALISE_PROJETO_COMPLETA_20251105.md  ARKITECT_CRITICAL_IMPROVEMENTS.md  ARKITECT_EXTENSION_SUMMARY.md  ARKITECT_INTEGRATION.md  ARQUITETURA_SISTEMA_VS_INTERFACE.md  AVALIACAO_EAP_ATUAL.md  CHANGELOG.md  CHESS_COM_MECHANICS.md  CODEX_SETUP_INSTRUCTIONS.md  COMMIT_RELEASE_SUMMARY.md  CONFIGURAR_SH1W4.md  CONSOLIDACAO_IMPLEMENTACOES.md  CORRECAO_FUNDO_BRANCO.md  CORRECOES_BOTOES_IMPLEMENTADAS.md  DEVELOPMENT.md  DIAGNOSTICO_TABULEIROS_AUTOMATIZADO.html  Desenvolvimento-Cursor.md  Dockerfile  EAP_ERROS_TABULEIROS.md  EFEITOS_VISUAIS_INTERATIVOS.md  EXECUTION_TIMELINE.md  EXECUTIVE_SUMMARY_FINAL.md  FILE_STRUCTURE.md  GAMIFICACAO_IMPLEMENTADA.md  GPT_CODEX_QUICK_ACCESS.md  GUIA_MIGRACAO_RAPIDA.md  HOTFIX_NOTES.md  IMPLEMENTACAO_COMPLETA.md  IMPLEMENTACOES_WEB_ORGANIZADAS.md  INSTRUCOES_TOKEN.md  INTEGRATION_REPORT.md  LANDING_PAGE_ENHANCEMENTS.md  (+123 more)
.arkitect/: arkitect.yaml  rules.yaml
.arquimax/: config.yaml
.docsync/: config.yaml  docsync.yaml  init.py  landing_page_reuse_guide.md  layer_config.yaml
.github/: CODEX_ACCESS.md  PULL_REQUEST_TEMPLATE.md
.monitoring/: config.yaml
.next/: trace
.taskmash/: config.yaml  dependencies.yaml
.versions/: config.json
arkitect/: __init__.py  components.py  mcp_devops.py
certs/: aeon-chess.local-key.pem  aeon-chess.local.pem
components/: AdaptiveInsights.js  (+8 more)
(+1201 files in other folders)
